@@ -83,9 +83,6 @@ OP_TributeTimer=0x3294
 OP_SendTributes=0x0a1c
 OP_SendGuildTributes=0x1781
 OP_TributeInfo=0x5dd2
-OP_TaskDescription=0x2294
-OP_TaskActivity=0x7181
-OP_CompletedTasks=0x9495
 OP_Weather=0x0bd7
 OP_ReqClientSpawn=0x5a4f
 OP_SpawnDoor=0x7b6c
@@ -180,10 +177,9 @@ OP_MoneyOnCorpse=0x1837
 OP_RandomReply=0x6525
 OP_DenyResponse=0x344a
 OP_SkillUpdate=0x52c6
-OP_GMTrainSkillConfirm=0x3960
+OP_GMTrainSkillConfirm=0x35cc	# 0x3960
 OP_RandomReq=0x59db
 OP_Death=0x3a65
-OP_Bind_Wound=0x585d
 OP_GMTraining=0x6e8f
 OP_GMEndTraining=0x7ffe
 OP_GMTrainSkill=0x444c
@@ -209,16 +205,16 @@ OP_Report=0x6d94
 OP_Damage=0x5428
 OP_ChannelMessage=0x33bc
 OP_Assist=0x4cd1
-OP_AssistGroup=0x1d37
+OP_AssistGroup=0x63df
 OP_MoveCoin=0x765a
-OP_ZonePlayerToBind=0x6f93
+OP_ZonePlayerToBind=0x7f99
 OP_KeyRing=0x04ba
 OP_WhoAllRequest=0x78eb
 OP_WhoAllResponse=0x3393
 OP_FriendsWho=0x3dac
 OP_ConfirmDelete=0x78e0
 OP_Logout=0x64bd
-OP_Rewind=0x69d7
+OP_Rewind=0x5521
 OP_TargetCommand=0x000a
 OP_Hide=0x2da1
 OP_Jump=0x1d47
@@ -315,7 +311,7 @@ OP_PVPLeaderBoardReply=0x3e78
 OP_PVPLeaderBoardDetailsRequest=0x46f4
 OP_PVPLeaderBoardDetailsReply=0x6a60
 OP_RestState=0x3ad5
-OP_RespawnWindow=0x7f99
+OP_RespawnWindow=0x7767
 OP_DisciplineTimer=0x5e3f
 OP_LDoNButton=0x596e
 OP_SetStartCity=0x2d1b
@@ -391,7 +387,7 @@ OP_EndLootRequest=0x3d8c
 OP_LootItem=0x515b
 OP_LootComplete=0x256d
 
-# bazaar trader stuff stuff:
+# bazaar trader stuff:
 OP_BazaarSearch=0x2ad2
 OP_TraderDelItem=0x63c8		# Same as OP_ShopDelItem
 OP_BecomeTrader=0x74bc
@@ -522,18 +518,22 @@ OP_Fishing=0x53c2
 OP_InstillDoubt=0x63a5
 OP_FeignDeath=0x677d
 OP_Mend=0x324f
+OP_Bind_Wound=0x585d
 OP_LDoNOpen=0x3567
 
 # Task packets
+# OP_TaskDescription=0x2294
+OP_TaskActivity=0x7181
+OP_CompletedTasks=0x9495
 OP_TaskActivityComplete=0x71cd
-OP_TaskMemberList=0x1656
-OP_OpenNewTasksWindow=0x717b
-OP_AvaliableTask=0x2377
 OP_AcceptNewTask=0x394d
-OP_TaskHistoryRequest=0x6cf6
-OP_TaskHistoryReply=0x25eb
 OP_CancelTask=0x0c7f
-OP_DeclineAllTasks=0x0000
+# OP_TaskMemberList=0x1656
+# OP_OpenNewTasksWindow=0x717b
+# OP_AvaliableTask=0x2377
+# OP_TaskHistoryRequest=0x6cf6
+# OP_TaskHistoryReply=0x25eb
+# OP_DeclineAllTasks=0x0000
 
 # Title opcodes
 OP_NewTitlesAvailable=0x45d1
