@@ -4,6 +4,9 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 Derision: RoF: Marked position of Monk 'Mend' skill cooldown timer in PP. Fixed a typo.
 Bad_Captain: Mercs - Merged from branch. Initial merc commit to trunk with semi-functional tank mercs.
 Uleat: RoF: Changed opcode so that is handled properly. (Was writing to the log about twice-per-second.)
+Trevius: RoF: Death no longer crashes players and the respawn window is now functional.
+Trevius: RoF: More work on slot conversions.  This time for the cursor buffer.
+Trevius: RoF: Some work on Guild Master Training packets, but still only seeing languages displayed.
 
 OPTIONAL SQL: utils/sql/svn/2380_optional_merc_rules.sql						-- Contains rules for mercs including rule to enable mercs
 OPTIONAL SQL: utils/sql/svn/2380_optional_merc_merchant_npctypes_update.sql		-- Contains npc_types & spawn updates for merc merchants in PoK
